// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> can underline  1`] = `
<span
  className="container-0-2-1"
>
  <div
    aria-labelledby="uuid-test-mock"
    className="underlined-0-2-3"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      href="#"
    >
      hello world
    </a>
  </div>
  <div
    className="offscreen-0-2-2"
    id="uuid-test-mock"
  >
    test
  </div>
  <Overlay
    noBackground={true}
    onClose={[Function]}
  >
    <div
      className="tooltip-0-2-4 tooltip_below-0-2-6 inline-0-0-2-14"
      role="tooltip"
    >
      <div
        className="shadow-0-2-7"
      >
        <NotchedBox
          inverted={true}
          notchBelow={false}
        >
          <Text
            inverted={true}
          >
            test
          </Text>
        </NotchedBox>
      </div>
    </div>
  </Overlay>
</span>
`;

exports[`<Tooltip /> disabled does not underline 1`] = `
<span
  className="container-0-2-1"
>
  <div
    aria-labelledby="uuid-test-mock"
    className=""
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      href="#"
    >
      hello world
    </a>
  </div>
  <div
    className="offscreen-0-2-2"
    id="uuid-test-mock"
  >
    test
  </div>
  <Overlay
    noBackground={true}
    onClose={[Function]}
  >
    <div
      className="tooltip-0-2-4 tooltip_below-0-2-6 inline-0-0-2-19"
      role="tooltip"
    >
      <div
        className="shadow-0-2-7"
      >
        <NotchedBox
          inverted={true}
          notchBelow={false}
        >
          <Text
            inverted={true}
          >
            test
          </Text>
        </NotchedBox>
      </div>
    </div>
  </Overlay>
</span>
`;

exports[`<Tooltip /> disabled does not up when hovered 1`] = `
<span
  className="container-0-2-1"
>
  <div
    aria-labelledby="uuid-test-mock"
    className=""
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      href="#"
    >
      hello world
    </a>
  </div>
  <div
    className="offscreen-0-2-2"
    id="uuid-test-mock"
  >
    test
  </div>
  <Overlay
    noBackground={true}
    onClose={[Function]}
  >
    <div
      className="tooltip-0-2-4 tooltip_below-0-2-6 inline-0-0-2-16"
      role="tooltip"
    >
      <div
        className="shadow-0-2-7"
      >
        <NotchedBox
          inverted={true}
          notchBelow={false}
        >
          <Text
            inverted={true}
          >
            test
          </Text>
        </NotchedBox>
      </div>
    </div>
  </Overlay>
</span>
`;

exports[`<Tooltip /> once open supports changing content 1`] = `
<span
  className="container-0-2-1"
>
  <div
    aria-labelledby="uuid-test-mock"
    className=""
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      href="#"
    >
      hello world
    </a>
  </div>
  <div
    className="offscreen-0-2-2"
    id="uuid-test-mock"
  >
    whatever
  </div>
  <Overlay
    noBackground={true}
    onClose={[Function]}
    open={true}
  >
    <div
      className="tooltip-0-2-4 tooltip_below-0-2-6 inline-0-0-2-29"
      role="tooltip"
    >
      <div
        className="shadow-0-2-7"
      >
        <NotchedBox
          inverted={true}
          notchBelow={false}
        >
          <Text
            inverted={true}
          >
            whatever
          </Text>
        </NotchedBox>
      </div>
    </div>
  </Overlay>
</span>
`;

exports[`<Tooltip /> opens up when hovered 1`] = `
<span
  className="container-0-2-1"
>
  <div
    aria-labelledby="uuid-test-mock"
    className=""
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      href="#"
    >
      hello world
    </a>
  </div>
  <div
    className="offscreen-0-2-2"
    id="uuid-test-mock"
  >
    test
  </div>
  <Overlay
    noBackground={true}
    onClose={[Function]}
    open={true}
  >
    <div
      className="tooltip-0-2-4 tooltip_below-0-2-6 inline-0-0-2-9"
      role="tooltip"
    >
      <div
        className="shadow-0-2-7"
      >
        <NotchedBox
          inverted={true}
          notchBelow={false}
        >
          <Text
            inverted={true}
          >
            test
          </Text>
        </NotchedBox>
      </div>
    </div>
  </Overlay>
</span>
`;
